--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,7 @@
-<h1>Youre browser is {{ user_agent }}</h1>
+{% extends "base.html" %}
+
+{% block page_content %}
+    <h1>Your browser is {{ user_agent }}</h1>
+    <p>The local date and time is {{ moment(current_time).format('LLL') }}</p>
+    <p>That was {{ moment(current_time).fromNow(refresh=True) }}</p>
+{% endblock %}
